--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
     <a href="albums.html">Albums</a>
 </nav>
    <hr style="border: 3px solid rgb(255, 255, 255);">
-    
 
-<div class="img3">
+<div class="media">
    <img src="https://img.huffingtonpost.com/asset/5fee2d3c260000fd2f0c640b.jpeg?cache=oDF7l8qUTB&ops=1778_1000" alt="The Weeknd" width="600" height="350">
+   <video controls>
+        <source src="" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
    <div class="text">
    <p>The Weeknd, whose real name is Abel Makkonen Tesfaye, is a Canadian singer, songwriter, and record producer known for his unique blend of R&B, pop, and alternative music. He first gained recognition in 2010 by anonymously uploading songs to YouTube, which led to a series of successful mixtapes. His debut studio album, "Kiss Land," was released in 2013, followed by critically acclaimed albums like "Beauty Behind the Madness" (2015), "Starboy" (2016), and "After Hours" (2020). The Weeknd is known for his distinctive voice, dark and moody lyrics, and his ability to seamlessly blend various musical styles. He has won numerous awards, including multiple Grammy Awards, and has collaborated with artists such as Daft Punk, Ariana Grande, and Kendrick Lamar. The Weeknd's music often explores themes of love, heartbreak, and self-reflection, making him one of the most influential artists of his generation.</p>
    <p>In addition to his music career, The Weeknd has also made a significant impact on popular culture with his unique fashion sense and visually striking music videos. He is known for his signature hairstyle, which has become an iconic part of his image. The Weeknd has also been involved in various philanthropic efforts, including donations to organizations focused on education, mental health, and social justice. With his innovative sound and captivating performances, The Weeknd continues to push the boundaries of contemporary music and remains a prominent figure in the entertainment industry.</p>
    <p>Overall, The Weeknd's journey from an anonymous artist to a global superstar is a testament to his talent, creativity, and dedication to his craft. His ability to connect with audiences through his music and his willingness to experiment with different sounds has solidified his place as one of the most influential and successful artists of the 21st century.</p>
-   </div></div>
    <p>He chose his stage name, "The Weeknd," after leaving home one weekend at age 17 and never returning. To avoid copyright issues with a Canadian band that had the same name, he removed the "e." After gaining momentum with his mixtapes, which were later reissued as the compilation album Trilogy, he signed with Republic Records in 2012. He went on to release several commercially successful albums, including Beauty Behind the Madness (2015) and Starboy (2016), which featured hit songs that solidified his status as a global superstar.</p>
-
+   </div>
 </body>
 </html>
